fixed number alignments in dashboard

--- a/src/senaite/lims/browser/bootstrap/static/css/bootstrap-integration.css
+++ b/src/senaite/lims/browser/bootstrap/static/css/bootstrap-integration.css
@@ -16,6 +16,9 @@
     height: auto;
     font-size: 100%;
 }
+.dashboard-info-panel-number {
+    padding-left: 20px!important;
+}
 
 
 /* /Bika Style overwrites */
